2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/main.c (gimp_dbus_open): initialize "uri" to NULL.
	#include "file/file-utils.h"

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager-private.h: formatting.

2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/actions/data-commands.c
	* app/base/boundary.c
	* app/base/gimphistogram.c
	* app/base/gimplut.c
	* app/base/temp-buf.c
	* app/core/gimpcontainer.c
	* app/core/gimpgradient.c
	* app/core/gimpparamspecs.c
	* app/core/gimpundo.c
	* app/plug-in/gimpplugin-cleanup.c
	* app/plug-in/gimppluginmanager-data.c
	* app/plug-in/gimppluginmanager-help-domain.c
	* app/plug-in/gimppluginmanager-locale-domain.c
	* app/plug-in/gimppluginmanager-menu-branch.c
	* app/plug-in/gimppluginprocframe.c
	* app/vectors/gimpanchor.c
	* app/widgets/gimpsessioninfo.c: use GSlice instead of g_new/g_free
	for structs of fixed size.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpprogressbox.c (gimp_progress_box_progress_start)
	(gimp_progress_box_progress_set_text): process updates.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/core/gimpbrush.c (gimp_brush_get_new_preview): plugged a
	memory leak caused by one variable shadowing another.

	* app/vectors/gimpvectors-import.c (gimp_vectors_import): free the
	SvgPath structs.

2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/vectors/gimpvectors-warp.c (gimp_stroke_warp_point): don't
	leak three GimpCoords per warped point (eek).

2007-05-21  Sven Neumann  <sven@gimp.org>

	* themes/Default/images/preferences/Makefile.am: formatting.

2007-05-21  Sven Neumann  <sven@gimp.org>

	* autogen.sh: also look for automake-1.10.

2007-05-21  Sven Neumann  <sven@gimp.org>

	* app/core/gimp.c (gimp_message): documentation.

	* app/actions/documents-commands.c
	* app/widgets/gimplayertreeview.c
	* app/widgets/gimptoolbox-dnd.c: pass parent widgets to gimp_message().

2007-05-21  Sven Neumann  <sven@gimp.org>
